/*
 * Copyright 2024 Sowers, LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

option go_package = "bosca.io/api/protobuf/bosca/workflow";

import "bosca/workflow/prompts.proto";
import "bosca/workflow/storage_systems.proto";
import "bosca/workflow/models.proto";

package bosca.workflow;

enum WorkflowActivityParameterType {
  unknown_activity_parameter_type = 0;
  context = 1;
  supplementary = 2;
}

message Activity {
  string id = 1;
  string name = 2;
  string description = 3;
  optional string child_workflow_id = 4;
  map<string, string> configuration = 5;
  map<string, WorkflowActivityParameterType> inputs = 6;
  map<string, WorkflowActivityParameterType> outputs = 7;
}

message WorkflowActivityPrompt {
  Prompt prompt = 1;
  map<string, string> configuration = 2;
}

message WorkflowActivityPrompts {
  repeated WorkflowActivityPrompt prompts = 1;
}

message WorkflowActivityStorageSystem {
  StorageSystem storage_system = 1;
  repeated StorageSystemModel models = 2;
  map<string, string> configuration = 3;
}

message WorkflowActivityStorageSystems {
  repeated WorkflowActivityStorageSystem systems = 1;
}

message WorkflowActivityModel {
  Model model = 1;
  map<string, string> configuration = 2;
}

message WorkflowActivityModels {
  repeated WorkflowActivityModel models = 1;
}

message WorkflowActivity {
  int64 workflow_activity_id = 1;
  string activity_id = 2;
  optional string child_workflow_id = 3;
  string queue = 4;
  int32 execution_group = 5;
  map<string, string> configuration = 6;
  map<string, string> inputs = 7;
  map<string, string> outputs = 8;
}

message WorkflowActivities {
  repeated WorkflowActivity activities = 1;
}

message WorkflowActivityIdRequest {
  string workflow_id = 1;
  string activity_id = 2;
}

message WorkflowActivityIdIntRequest {
  string workflow_id = 1;
  int64 workflow_activity_id = 2;
}
